@@ -10,6 +10,7 @@ Version 0.9.3 - Start of scripts for the document:
     * Added Right Marigin option and Single Color Selection Options
     * Added Python, C and C++ Support
     * Added Ruby Syntax Support
+     * Fixed Issue 37 (NPE for LineNumbersRuler)
 Version 0.9.2:
     * Fixing Java Indentation and Un-Indentattion Actions
     * Added and used (in the Tester) clearUndoes on the SyntaxDocument
